wacc/test/golden/syntaxErr.pairs.badLookup02
# try to directly print pair's second element

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
	pair(int, char) p = newpair(10, 'a') ;
  println snd p
end


(line 13, column 11):
  unexpected keyword snd
  expected expression
  >	pair(int, char) p = newpair(10, 'a') ;
  >  println snd p
             ^^^
  >end